# roo-framework-memory-added

./: .env.example  .roomodes  AGENTS.md  LICENSE  README.md  constraints.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
KNOWLEDGE/: Advanced Customization Features.md  roo Folder Structure and Configuration.md  roomodes File Format and Functionality.md
data/exports/: programming-issues-chunks.jsonl
data/knowledge-bases/: programming-issues.sqlite
docs/: implementation-guide.md  security.md
docs/contracts/: backlog_v1.schema.json  handoff_v1.schema.json  workflow_state_v2.schema.json
docs/mcp/: config.sample.md
issuesdb/: index_state.json
knowledge-base/: AGENTS-issues-kb.md  issues_index.sql
knowledge-base/monitoring/: alert_manager.py  metrics_collector.py
knowledge-base/monitoring/config/: thresholds.json
knowledge-base/schemas/: chunk.schema.json  issue.schema.json
knowledge-base/scripts/: build_index.py  check_health.py  chunk_export.py  collect_sonar.py  emit_issue.py  json_utils.py  memory_monitor.py  render_memory_bank.py  search.py  security_scan.py  validate_roo_compatibility.py
memory-bank/: global-patterns.md
memory-bank/data/: actionable-patterns.json
memory-bank/lib/: documentation-generator.js  documentation-validator.js  learning-error-handler.js  learning-protocol-client.js  learning-quality-control.js  learning-workflow-helpers.js  pattern-storage.js
memory-bank/schemas/: pattern-schema.json
project/backend/: AGENTS.md
project/frontend/: AGENTS.md
project/sample-app/control/: backlog.yaml  capabilities.yaml  issue-patterns.yaml  quality-dashboard.json  sprint.yaml  workflow-state.json
scripts/: audit_autonomous_actions.py  generate-documentation.js  generate_sprint_report.py  path_utils.py  reset_memory_bank.sh  setup_project.sh  test_conflict_resolution.py  test_dynamic_delegation.py  test_quality_intervention.py  validate_config.py
src/orchestration/: __init__.py  main.py
tests/: detect_quality_anomalies.test.js  learning_error_handler.test.js  learning_protocol_client.test.js  learning_quality_control.test.js  learning_workflow_helpers.test.js  pattern_storage.test.js  test_audit_exceptions.py  test_documentation_quality.js  test_output_helpers.py  test_path_utils.py  test_quality_threshold_orchestrator.py  test_report_generation_exceptions.py  test_validate_config_exceptions.py
